--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-transformers
-langdetect
-torch
-sentencepiece
-os
+streamlit>=1.35.0
+transformers>=4.41.0
+langdetect>=1.0.9
+torch>=2.2.2
+sentencepiece>=0.2.0
